--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -8,7 +9,7 @@
 </head>
 
 <body>
-  <!-- Header: source: Boot Camp Module 1 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header-->
+  <!-- Header: resource: Boot Camp Module 1 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/header-->
   <header>
     <h1>Hori<span class="seo">seo</span>n</h1>
     <nav>
@@ -23,64 +24,66 @@
           <a href="#social-media-marketing">Social Media Marketing</a>
         </li>
       </ul>
-      </nav>
+    </nav>
   </header>
 
-<!-- Background Banner Image, source: https://www.w3schools.com/howto/howto_css_hero_image.asp -->
+  <!-- Background Banner Image, resource used: https://www.w3schools.com/howto/howto_css_hero_image.asp -->
   <figure
     class="hero"
     role="img"
     aria-label="Empployees having discussion"
   ></figure>
 
-<!-- Main content -->
+  <!-- Main content -->
   <main>
-<!-- Alt Atributes -->
-  <section class="services">
-    <article id="search-engine-optimization" class="service">
+    <!-- Alt Atributes -->
+    <section class="services">
+      <article id="search-engine-optimization" class="service">
         <img
-            src="./assets/images/search-engine-optimization.jpg"
-            class="float-left"
-            alt="Desktop"
-          />
-        <h2>Search Engine Optimization</h2>
+          src="./assets/images/search-engine-optimization.jpg"
+          class="float-left"
+          alt="Desktop"
+        />
+         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right
           customers for your business.
         </p>
-    </article>
-
+      </article>
       <article id="online-reputation-management" class="service">
         <img
           src="./assets/images/online-reputation-management.jpg"
           class="float-right"
-          alt="Laptop reputation"
+          alt="Laptop-reputation"
         />
-        <h2>Online Reputation Management</h2>
+         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential
           customers see when they search for your business.
         </p>
 
-      <article id="social-media-marketing" class="service">
-        <img
-          src="./assets/images/social-media-marketing.jpg"
-          class="float-left"
-          alt="Social Media"
-        />
-        <h2>Social Media Marketing</h2>
-        <p>
-          Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-        </p>
-      </article>
+        <article id="social-media-marketing" class="service">
+          <img
+            src="./assets/images/social-media-marketing.jpg"
+            class="float-left"
+            alt="Social Media Influence"
+          />
+           <h2>Social Media Marketing</h2>
+          <p>
+            Social media continues to have a sizable influence on buying habits.
+            Social media marketing helps you determine which platforms are
+            suited to your brand, using analytics to find the right markets and
+            increase your lead generation.
+          </p>
+        </article>
     </section>
 
     <section class="benefits">
       <article class="benefit">
         <h3>Lead Generation</h3>
         <img
-        src="./assets/images/lead-generation.png"
-        alt="Lead Generation Icon"
+          src="./assets/images/lead-generation.png"
+          alt="Lead Generation Icon"
         />
         <p>
           Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -100,6 +103,7 @@
         <h3>Cost Management</h3>
         <img
           src="./assets/images/cost-management.png"
+          alt="Cost Management Icon"
         />
         <p>
           As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -107,7 +111,8 @@
       </article>
     </section>
   </main>
-  <!-- Footer: source: Boot Camp Module 1 https://www.w3schools.com/tags/tag_footer.asp -->
+
+  <!-- Footer: resource: Boot Camp Module 1 https://www.w3schools.com/tags/tag_footer.asp -->
   <footer class="footer">
     <h2>Made with ❤️️ by Horiseon</h2>
     <p>
@@ -115,4 +120,5 @@
     </p>
   </footer>
 </body>
+
 </html>
