Final Commit with readme including screenshot

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- Main content -->
   <main>
-    <!-- Alt Atributes -->
+    <!-- Alt Atributes - content of the site -->
     <section class="services">
       <article id="search-engine-optimization" class="service">
         <img
@@ -61,6 +61,7 @@
           The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential
           customers see when they search for your business.
         </p>
+      </article>
 
         <article id="social-media-marketing" class="service">
           <img
